css change: bug on iPhone X screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,7 +275,7 @@ h1 {
     }
 
     .btn {
-        padding: 1rem 7.25rem;
+        padding: 1rem 7.25rem !important;
         margin: 0;
     }
 
@@ -292,7 +292,7 @@ h1 {
 
     .hostImage {
         background-image: url(../mobile/image-host.jpg);
-        width: 100%;
+        max-width: 100%;
         height: 100%;
         opacity: 0.3;
     }
